# actuflow

./: .env.example  .gitignore  .vercelignore  DEPLOY_RAILWAY.md  DEPLOY_VERCEL.md  Makefile  PRODUCT.md  QUICKSTART.md  README.md  context.md  docker-compose.yml  render.yaml  vercel.json
.aye/: file_index.json
.aye/chroma_db/075e8c6e-b223-4022-bec9-6fd5f03f252b/: index_metadata.pickle
.aye/snapshots/001_20260411T035618/: context.md  metadata.json
.aye/snapshots/002_20260411T041108/: context.md  metadata.json
.aye/snapshots/003_20260411T112925/: metadata.json
.aye/snapshots/004_20260411T113358/: metadata.json
.aye/snapshots/005_20260411T114153/: metadata.json
.aye/snapshots/006_20260411T115345/: metadata.json
.aye/snapshots/007_20260411T120632/: __init__.py  ai_query_log.py  automation_rule.py  config.py  document.py  experience_analysis.py  metadata.json  router.py
.aye/snapshots/008_20260411T121540/: metadata.json
.aye/snapshots/009_20260412T184824/: metadata.json
.aye/snapshots/010_20260412T195141/: App.tsx  Dockerfile  ai.ts  aiStore.ts  (+20 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-gh-pages.yml
ai_service/: Dockerfile  config.py  main.py  requirements.txt
ai_service/api/: __init__.py  anomaly.py  embeddings.py  extraction.py  nlp.py
ai_service/models/: entity_extractor.py  intent_classifier.py  yet.txt
ai_service/services/: __init__.py  anomaly_service.py  embedding_service.py  extraction_service.py  llm_client.py  nlp_service.py
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  celery_app.py  config.py  database.py  dependencies.py  exceptions.py  main.py
backend/app/api/: ai.py  assumptions.py  audit.py  auth.py  automation.py  calculations.py  claims.py  coverages.py  dashboards.py  documents.py  experience.py  health.py  imports.py  models.py  notifications.py  policies.py  policyholders.py  reports.py  roles.py  router.py  scenarios.py  search.py  tasks.py  users.py
backend/app/models/: __init__.py  ai_query_log.py  assumption_set.py  assumption_table.py  audit_log.py  automation_rule.py  base.py  calculation_result.py  calculation_run.py  claim.py  comment.py  coverage.py  dashboard_config.py  data_import.py  document.py  experience_analysis.py  generated_report.py  job_execution.py  model_definition.py  notification.py  policy.py  policyholder.py  report_template.py  role.py  scenario.py  scenario_result.py  scheduled_job.py  task.py  user.py
backend/app/repositories/: assumption_repository.py  base.py  calculation_repository.py  policy_repository.py  user_repository.py
backend/app/schemas/: __init__.py  ai.py  assumption.py  audit.py  auth.py  automation.py  calculation.py  claim.py  comment.py  common.py  coverage.py  dashboard.py  data_import.py  document.py  experience.py  model.py  notification.py  policy.py  policyholder.py  report.py  role.py  scenario.py  search.py  task.py  user.py
backend/app/services/: ai_service.py  assumption_service.py  audit_service.py  auth_service.py  automation_service.py  document_service.py  experience_service.py  import_service.py  notification_service.py  policy_service.py
backend/app/tasks/: calculation_tasks.py  import_tasks.py  report_tasks.py
backend/app/utils/: security.py
backend/migrations/: env.py
backend/scripts/: create_superuser.py  seed_db.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_policies.py
calculation_engine/: Dockerfile  README.md  __init__.py  celery_app.py  config.py  pyproject.toml  requirements.txt  tasks.py
calculation_engine/engine/: executor.py
calculation_engine/tasks/: calculation_task.py  import_task.py  report_task.py  scheduled_job_task.py
docs/: ai-features.md  api-contracts.md  architecture.md  automation-guide.md  calculation-engine.md  data-model.md  deployment-github-pages.md  deployment-render.md  onboarding-guide.md  regulatory-compliance.md  user-roles-permissions.md
frontend/: .env.example  .env.production  Dockerfile.prod  docker-entrypoint.sh  index.html  nginx.conf  package.json  railway.json  tailwind.config.js  vite.config.ts
frontend/public/: 404.html
frontend/src/: App.tsx  index.css  laja  main.tsx  routes.tsx
infrastructure/keycloak/: realm-export.json
scripts/: init-db.sql  init_db.sql  load_mortality_tables.py  migrate.sh  seed_db.py
(+527 files in other folders)
