[tool.poetry]
name = "actuflow-calculation-engine"
version = "0.1.0"
description = "ActuFlow Calculation Engine"
authors = ["ActuFlow <dev@actuflow.com>"]
packages = [{include = "."}]

[tool.poetry.dependencies]
python = "^3.12"
celery = {extras = ["redis"], version = "^5.3.6"}
redis = "^5.0.1"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
pandas = "^2.1.4"
numpy = "^1.26.3"
scipy = "^1.12.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
ruff = "^0.1.11"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
